Add working registration and login functionality

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -22,8 +22,8 @@
   <nav>
     <ul>
       <li><a href="/">Home</a></li>
-      <li><a href='users/login'>Login</a></li>
-      <li><a href='users/new'>Register</a></li>
+      <li><a href='/users/login'>Login</a></li>
+      <li><a href='/users/new'>Register</a></li>
     </ul>
   </nav>
   <%= yield %>
