Update nav bar to change depending on logged in status, update controller to handle registration and logging in and out

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -21,9 +21,15 @@
 <body>
   <nav>
     <ul>
+      <% if current_user == nil %>
       <li><a href="/">Home</a></li>
       <li><a href='/users/login'>Login</a></li>
       <li><a href='/users/new'>Register</a></li>
+      <% else %>
+        <li><a href="/">Home</a></li>
+        <li><a href='/users/logout'>Logout</a></li>
+        <li><a href='/users/new'></a></li>
+      <% end %>
     </ul>
   </nav>
   <%= yield %>
