Update new project form, project model, and seed

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -27,8 +27,9 @@
       <li><a href='/users/new'>Register</a></li>
       <% else %>
         <li><a href="/">Home</a></li>
+        <li><a href='/projects'>Projects</a></li>
+        <li><a href='/projects/new'>New Project</a></li>
         <li><a href='/users/logout'>Logout</a></li>
-        <li><a href='/users/new'></a></li>
       <% end %>
     </ul>
   </nav>
