Update new project functionality

--- a/app/views/organizations/new.erb
+++ b/app/views/organizations/new.erb
@@ -17,7 +17,7 @@
         <input type="text" name="user[email]"><br>
         Password:
         <input type="password" name="user[password]"><br>
-        <input class="myButton" type="submit" value="Create Account">
+        <input class="myButton" type="submit" value="Create Project">
       </form>
     </div>
 
