--- a/public/css/application.css
+++ b/public/css/application.css
@@ -14,4 +14,11 @@ nav ul li {
   display: inline;
 }
 
+.container {
+  border: 1px solid pink;
+  width: 80%;
+  margin: 5px;
+  padding: 5px;
+}
+
 
