--- a/app/views/projects/index.erb
+++ b/app/views/projects/index.erb
@@ -1,6 +1,6 @@
 <% @projects.each do |project| %>
   <div class='container'>
-    <div>Project Manager: <%= project.name  %></div>
+    <div><a href="/projects/<%=project.id%>">Project Name: <%= project.name  %></a></div>
     <div>Project Organization: <%= project.organization.name %></div>
     <div>Located at <%= project.location %></div>
     <div>From <%= project.begin_date %> to <%= project.end_date %></div><br>
