Add organization show and index, update layout

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -23,13 +23,18 @@
     <ul>
       <% if !current_user %>
       <li><a href="/">Home</a></li>
+      <li><a href="/blog">Blog</a></li>
       <li><a href='/projects'>Projects</a></li>
+      <li><a href='/organizations'>Organizations</a></li>
       <li><a href='/users/login'>Login</a></li>
       <li><a href='/users/new'>Register</a></li>
       <% else %>
         <li><a href="/">Home</a></li>
+        <li><a href="/blog">Blog</a></li>
         <li><a href='/projects'>Projects</a></li>
         <li><a href='/projects/new'>New Project</a></li>
+        <li><a href='/organizations'>Organizations</a></li>
+        <li><a href='/organizations/new'>New Organization</a></li>
         <li><a href='/users/logout'>Logout</a></li>
       <% end %>
     </ul>
