--- a/app/views/organizations/new.erb
+++ b/app/views/organizations/new.erb
@@ -7,18 +7,12 @@
     <% end %>
   </div>
 
-    <h1>Join Today</h1>
-      <form action="/users" method="POST">
-        First Name:
-        <input type ="text" name="user[first_name]">
-        Last Name:
-        <input type ="text" name="user[last_name">
-        Email:
-        <input type="text" name="user[email]"><br>
-        Password:
-        <input type="password" name="user[password]"><br>
-        <input class="myButton" type="submit" value="Create Project">
-      </form>
-    </div>
-
+  <h1>New organization</h1>
+  <form action="/organizations" method="POST">
+    <div>Name:
+    <input type="text" name="organization[name]" value=<%=@organization.name%>></div>
+    <div>Type_of:
+    <input type="text" name="organization[type_of]" value=<%=@organization.type_of%>></div>
+    <input class="myButton" type="submit" value="Create organization">
+  </form>
 </div>
