--- a/app/views/blog.erb
+++ b/app/views/blog.erb
@@ -7,19 +7,20 @@
 
 <div>To Do</div>
 <ol>
-  <li>Stripe Payments</li>
   <li>Edit Projects</li>
   <li>Delete Projects</li>
   <li>Edit Organizations</li>
   <li>Delete Organizations</li>
   <li>User and Organization Due Diligence</li>
   <li>User can only post if logged_in?</li>
+  <li>CSS</li>
+  <li>Index Page with Newest 3 Project </li>
   <li>Error messages</li>
 </ol>
 
 <div>Doing</div>
 <ol>
-  <li>CSS</li>
+  <li>Stripe Payments</li>
 </ol>
 
 <div>Donezo</div>
