--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,6 +8,8 @@
   -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/normalize.css">
+  <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+
   <!--
     application.css is where you put your styles
   -->
