Update blog list

--- a/app/views/blog.erb
+++ b/app/views/blog.erb
@@ -20,10 +20,15 @@
 
 <div>Doing</div>
 <ol>
-  <li>Stripe Payments</li>
+  <li>Stripe Payments*
+    <ul>
+      <li>Add column to users table or create customer table </li>
+      <li>Post Show: Need to add charge button </li>
+    </ul>
+  </li>
 </ol>
 
-<div>Donezo</div>
+<div>Donezo!!!!!!!!!</div>
 <ol>
   <li>Add projects</li>
   <li>View projects</li>
