--- a/app/views/projects/new.erb
+++ b/app/views/projects/new.erb
@@ -8,5 +8,8 @@
   </div>
 
   <h1>New Project</h1>
+  <form action="/projects" method="POST">
   <%= erb :'/projects/_project_form'  %>
+  <input class="myButton" type="submit" value="Create Project">
+  </form>
 </div>
