--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -18,7 +18,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js"></script>
 
-  <title></title>
+  <title>YesMethodError</title>
 </head>
 <body>
   <nav>
