Add edit button for projects

--- a/app/views/blog.erb
+++ b/app/views/blog.erb
@@ -7,7 +7,7 @@
 
 <div>To Do</div>
 <ol>
-  <li>Edit Projects</li>
+  <li>Edit Projects -- Add buttons on each page for logged in user</li>
   <li>Delete Projects</li>
   <li>Edit Organizations</li>
   <li>Delete Organizations</li>
