--- a/app/views/projects/show.erb
+++ b/app/views/projects/show.erb
@@ -6,4 +6,11 @@
    <div>Details</div>
    <div><%= @project.details %></div>
    <div>Goal: $<%= @project.cost %></div>
+   <% if current_user == @project.organizer %>
+   <div>
+   <form action="/projects/<%= @project.id %>" method="GET">
+   <input class="myButton" type="submit" value="Edit Project">
+   </form>
+   </div>
+   <% end %>
  </div>
