--- a/app/views/organizations/new.erb
+++ b/app/views/organizations/new.erb
@@ -9,10 +9,7 @@
 
   <h1>New organization</h1>
   <form action="/organizations" method="POST">
-    <div>Name:
-    <input type="text" name="organization[name]" value=<%=@organization.name%>></div>
-    <div>Type_of:
-    <input type="text" name="organization[type_of]" value=<%=@organization.type_of%>></div>
+    <%= erb :'organizations/_organization_form' %>
     <input class="myButton" type="submit" value="Create organization">
   </form>
 </div>
