Update blog and edit controller

--- a/app/views/blog.erb
+++ b/app/views/blog.erb
@@ -2,13 +2,18 @@
 <ol>
   <li>Google Maps</li>
   <li>GoFundMe Goal Meter</li>
+  <li>Add volunteer functionality</li>
+  <li>User and Organization Due Diligence</li>
+  <li>Organization show: members</li>
   <li></li>
 </ol>
 
 <div>To Do</div>
 <ol>
-  <li>User and Organization Due Diligence</li>
+  <li>User profile page</li>
+  <li>Projects show money page</li>
   <li>User can only post if logged_in?</li>
+  <li>Index: Total amount of organizations</li>
   <li>CSS</li>
   <li>Error messages</li>
 </ol>
