--- a/app/views/blog.erb
+++ b/app/views/blog.erb
@@ -1,7 +1,7 @@
 <div>Stretch</div>
 <ol>
   <li>Google Maps</li>
-  <li>GoFundMe Goal Meter</li>
+  <li>GoFundMe Goal Meter with Stripe</li>
   <li>Add volunteer functionality</li>
   <li>User and Organization Due Diligence</li>
   <li>Organization show: members</li>
@@ -23,13 +23,13 @@
   <li>Stripe Payments*
     <ul>
       <li>Add column to users table or create customer table </li>
-      <li>Post Show: Need to add charge button </li>
     </ul>
   </li>
 </ol>
 
 <div>Donezo!!!!!!!!!</div>
 <ol>
+  <li>Post Show: Need to add charge button </li>
   <li>Edit Organizations</li>
   <li>Delete Organizations</li>
   <li>Index Page with Newest 3 Project </li>
