Update nav bar css

--- a/app/views/blog.erb
+++ b/app/views/blog.erb
@@ -5,7 +5,7 @@
   <li>Add volunteer functionality</li>
   <li>User and Organization Due Diligence</li>
   <li>Organization show: members</li>
-  <li></li>
+
 </ol>
 
 <div>To Do</div>
@@ -20,7 +20,7 @@
 
 <div>Doing</div>
 <ol>
-  <li>Stripe Payments*
+  <li>Stripe Payments</li>
     <ul>
       <li>Add column to users table or create customer table </li>
     </ul>
