--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -6,8 +6,8 @@
     differences in how form elements appear between Firefox and IE
     See: http://necolas.github.com/normalize.css/
   -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/normalize.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
 
   <!--
@@ -21,26 +21,40 @@
   <title>YesMethodError</title>
 </head>
 <body>
-  <nav>
-    <ul>
-      <% if !current_user %>
-      <li><a href="/">Home</a></li>
-      <li><a href="/blog">Blog</a></li>
-      <li><a href='/projects'>Projects</a></li>
-      <li><a href='/organizations'>Organizations</a></li>
-      <li><a href='/users/login'>Login</a></li>
-      <li><a href='/users/new'>Register</a></li>
-      <% else %>
-        <li><a href="/">Home</a></li>
-        <li><a href="/blog">Blog</a></li>
-        <li><a href='/projects'>Projects</a></li>
-        <li><a href='/projects/new'>New Project</a></li>
-        <li><a href='/organizations'>Organizations</a></li>
-        <li><a href='/organizations/new'>New Organization</a></li>
-        <li><a href='/users/logout'>Logout</a></li>
-      <% end %>
-    </ul>
-  </nav>
+  <nav class='navbar navbar-inverse'>
+    <div class="container-fluid">
+    <% if !current_user %>
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav">
+          <li><a href="/">Home</a></li>
+          <li><a href="/blog">Blog</a></li>
+          <li><a href='/projects'>Projects</a></li>
+          <li><a href='/organizations'>Organizations</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href='/users/login'>Login</a></li>
+          <li><a href='/users/new'>Register</a></li>
+        </ul>
+      </div>
+    <% else %>
+      <div class="container-fluid">
+        <div class="collapse navbar-collapse" id="myNavbar">
+          <ul class="nav navbar-nav">
+            <li><a href="/">Home</a></li>
+            <li><a href="/blog">Blog</a></li>
+            <li><a href='/projects'>Projects</a></li>
+            <li><a href='/projects/new'>New Project</a></li>
+            <li><a href='/organizations'>Organizations</a></li>
+            <li><a href='/organizations/new'>New Organization</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href='/users/logout'>Logout</a></li>
+          </ul>
+        </div>
+      </div>
+    <% end %>
+    </div>
+    </nav>
   <%= yield %>
 </body>
 </html>
