--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,28 +1,18 @@
-/*nav {
-  display: inline-block;
-  border-bottom: 3px solid blue;
+a {
+  color: #6897BB
 }
-
-body {
-  border: 1px solid blue;
-  width: 98%;
-}*/
-
-/*nav ul li {
-  list-style-type: none;
-  padding-left:20px;
-  display: inline;
-}*/
-
-./*container {
-  border: 1px solid pink;
-  width: 80%;
-  margin: 5px;
-  padding: 5px;
-}*/
-
-/*hr {
-  height: 2px;
-  background-color: purple;
-
-}*/
+/*
+@media (min-width: 768px){
+  .column-border {
+    padding-left: 10;
+    position: static;
+    border: 1px solid black;
+  }*/
+/*  .col-border:before {
+        content: "";
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        border-left: 1px solid black;
+  }*/
+}
