Add new css styling sheets and update fixed nav bar

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,6 +8,10 @@
   -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/normalize.css">
+  <link rel="stylesheet" href="/css/bootstrap.min.css.css">
+  <link rel="stylesheet" href="/css/modern-business.css">
+  <link rel="stylesheet" href="/css/bootsrap.css">
+
   <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
 
   <!--
@@ -21,7 +25,7 @@
   <title>YesMethodError</title>
 </head>
 <body>
-  <nav class='navbar navbar-inverse'>
+  <nav class='navbar navbar-inverse navbar-fixed-top'>
     <div class="container-fluid">
     <% if !current_user %>
       <div class="collapse navbar-collapse" id="myNavbar">
