--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,9 +8,9 @@
   -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/normalize.css">
-  <link rel="stylesheet" href="/css/bootstrap.min.css.css">
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/modern-business.css">
-  <link rel="stylesheet" href="/css/bootsrap.css">
+  <link rel="stylesheet" href="/css/bootstrap.css">
 
   <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
 
