--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -60,9 +60,10 @@ dfn {
   font-style: italic;
 }
 h1 {
+  padding-left: 13px;
   margin: .67em 0;
   font-size: 2em;
-}
+}s
 mark {
   color: #000;
   background: #ff0;
@@ -5459,7 +5460,8 @@ button.list-group-item-danger.active:focus {
           box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
 }
 .panel-body {
-  padding: 15px;
+  padding: 30px;
+  padding-left:15pxg;
 }
 .panel-heading {
   padding: 10px 15px;
