Add css for organization index page

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -3,7 +3,7 @@
   <div class='container col-md-4 column-border'>
     <div class = 'panel panel-default'>
       <div class ="panel-heading"><b> <a href="/projects/<%=project.id%>">Project Name: <%= project.name  %></a></b></div>
-        <div class = "panel body">
+        <div class = "panel-body">
         <div >Project Organization: <%= project.organization.name %></div>
         <div>Located at <%= project.location %></div>
         <div>From <%= project.begin_date %> to <%= project.end_date %></div><br>
