--- a/app/views/projects/index.erb
+++ b/app/views/projects/index.erb
@@ -3,7 +3,7 @@
   <div class='container col-md-4'>
     <div class = 'panel panel-default'>
       <div class ="panel-heading"><a href="/projects/<%=project.id%>">Project Name: <%= project.name  %></a></div>
-      <div class = "panel body">
+      <div class = "panel-body">
         <div>Project Organization: <%= project.organization.name %></div>
         <div>Located at <%= project.location %></div>
         <div>From <%= project.begin_date %> to <%= project.end_date %></div><br>
