--- a/app/views/organizations/index.erb
+++ b/app/views/organizations/index.erb
@@ -1,6 +1,8 @@
 <% @organizations.each do |organization| %>
   <div class='container col-md-4'>
-    <div><a href="/organizations/<%=organization.id%>">Organization Name: <%= organization.name  %></a></div>
-    <div>Type: <%= organization.type_of %></div>
+    <div class = 'panel panel-default'>
+      <div class='panel-heading'><a href="/organizations/<%=organization.id%>">Organization Name: <%= organization.name  %></a></div>
+      <div class ='panel-body'>Type: <%= organization.type_of %></div>
+    </div>
   </div>
 <% end %>
