--- a/app/views/organizations/show.erb
+++ b/app/views/organizations/show.erb
@@ -1,18 +1,22 @@
 <div class='container'>
-  <div>Organization Name: <%= @organization.name  %></a></div>
-  <div>Type: <%= @organization.type_of %></div>
+  <h2><div>Organization Name: <%= @organization.name  %></a></div></h2>
+  <div><b> Type: <%= @organization.type_of %> </b></div>
 </div>
 <hr>
 
 <% @organization.projects.each do |project| %>
   <div class='container'>
-    <div><a href="/projects/<%=project.id%>">Project Name: <%= project.name  %></a></div>
-    <div>Project Organization: <%= project.organization.name %></div>
-    <div>Located at <%= project.location %></div>
-    <div>From <%= project.begin_date %> to <%= project.end_date %></div><br>
-    <div>Details</div>
-    <div><%= project.details %></div>
-    <div>Goal: $<%= project.cost %></div>
+    <div class = 'panel panel-default'>
+      <div class='panel-heading'><a href="/projects/<%=project.id%>">Project Name: <%= project.name  %></a></div>
+      <div class='panel-body'>
+        <div>Project Organization: <%= project.organization.name %></div>
+        <div>Located at <%= project.location %></div>
+        <div>From <%= project.begin_date %> to <%= project.end_date %></div><br>
+        <div>Details</div>
+        <div><%= project.details %></div>
+        <div>Goal: $<%= project.cost %></div>
+      </div>
+    </div>
   </div>
 <% end %>
   <% if current_user == @organization.users.first %>
