--- a/app/views/projects/show.erb
+++ b/app/views/projects/show.erb
@@ -1,9 +1,10 @@
  <div class='container'>
-   <div>Project Name: <%= @project.name  %></div>
+
+   <h2> <div>Project Name: <%= @project.name  %></div> </h2>
    <div>Project Organization: <%= @project.organization.name %></div>
    <div>Located at <%= @project.location %></div>
    <div>From <%= @project.begin_date %> to <%= @project.end_date %><div><br>
-   <div>Details</div>
+   <h3> <div>Details</div></h3>
    <div><%= @project.details %></div>
    <div>Goal: $<%= @project.cost %></div>
    <% if current_user == @project.organizer %>
@@ -19,6 +20,7 @@
    </form>
    </div>
    <% end %>
+   <h3> Donate today! </h3>
    <div>
    <%=erb :'stripe/_charge'  %>
    </div>
