--- a/app/views/projects/show.erb
+++ b/app/views/projects/show.erb
@@ -24,4 +24,10 @@
    <div>
    <%=erb :'stripe/_charge'  %>
    </div>
+   <h3> Goal progress: 25% Funded</h3>
+   <div class="progress">
+      <div class="progress-bar" role="progressbar" aria-valuenow="70"
+      aria-valuemin="0" aria-valuemax="100" style="width:25%">
+  </div>
+</div>
  </div>
